styles.css
@import url(//fonts.googleapis.com/css?family=Open+Sans:400,700,800,300);
body {
    margin: 0;
    padding: 0;
    font-family: 'Open Sans','Helvetica Neue',Helvetica, sans-serif;
    line-height: 1.45;
}
header {
    color: #333333;
    background-color: #CCCCCC;
    padding: 40px 0;
    text-align: center;
}
h1 {
  font-size: 3rem;
  margin: 0 0 16px 0;
}
h2 {
  font-weight: 300;
  font-size: 1.5rem;
  margin: 0 0 16px 0;
}
#headtop {
    font-size: 18px;
    background-color: white;
    color: #282A35;
    padding-left: 12px;
    padding-right: 16px;
}
.container {
    margin: 0 auto;
    padding: 0 20px 0 20px;
    max-width: 900px;
}
.btn-tel {
    display: inline-block;
    text-decoration: none;
    color: white;
    font-weight: 500;
    font-size: 20px;
    background: #549DA0;
    border: none;
    border-radius: 5px;
    padding: 12px 16px;
    cursor: pointer;
}
.btn-tel:hover {
    background: #468486;
}
.submenu {
    display: none;
    left: 50%;
    transform: translate(-50%, 0);
    text-align:center;
    position: absolute;
    background-color: #549DA0;
    min-width: 160px;
    border-radius: 5px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
}
.submenu a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}
.submenu a:hover {
    background-color: #468486;
}
section {
    text-align: center;
    padding: 40px 0;
}
.features {
    background: #FFFFFF;
    color: #000000;
}
.feature {
    width: 32%;
    display: inline-block;
    font-size:16px;
}
.feature img {
    width:40%;
}
.quote {
    background:#549DA0;
    color:#FFFFFF;
}
blockquote p {
    margin: 0 0 5px 0;
    font-size: 24px;
}
blockquote cite {
    font-size: 16px;
    font-style: italic;
}  
blockquote cite:before {
    content: '–';
    margin-right: 5px;
}
footer {
    background: #353535;
    padding: 32px 0;
    text-align: center;
    color: #868686;
    font-size: 12px;
}
footer ul {
    margin: 0;
    padding: 0;
    list-style: none;
}
footer li {
    display: inline-block;
}
footer li a {
    padding: 6px;
    font-size: 14px;
    text-decoration: none;
    color: #c3c3c3;
}
footer li a:hover {
    color: white;
}

